# xml-coreutils

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  SFX  THANKS  bootstrap  configure.ac  configure.in
doc/: Makefile.am  People.xml  design_requirements.txt  food.xml  unix_xml.html  xml_coreutils_tutorial.html
man/: Makefile.am  TEMPLATE.1in  xml-awk.1in  xml-cat.1in  xml-coreutils.7in  xml-cp.1in  xml-cut.1in  xml-echo.1in  xml-file.1in  xml-find.1in  xml-fixtags.1in  xml-fmt.1in  xml-grep.1in  xml-head.1in  xml-less.1in  xml-ls.1in  xml-mv.1in  xml-paste.1in  xml-printf.1in  xml-rm.1in  xml-sed.1in  xml-strings.1in  xml-unecho.1in  xml-wc.1in
src/: Makefile.am  attlist.c  attlist.h  attributes.c  attributes.h  awkast.c  awkast.h  awkl.l  awkmem.c  awkmem.h  awkp.y  awkvm.c  awkvm.h  blockmgr.c  blockmgr.h  common.c  common.h  cstring.c  cstring.h  cursor.c  cursor.h  cursormgr.c  cursormgr.h  cursorrep.c  cursorrep.h  echo.c  echo.h  entities.c  entities.h  error.c  error.h  fbparser.c  fbparser.h  fbreader.c  fbreader.h  filelist.c  filelist.h  format.c  format.h  htfilter.c  (+91 more)
src/tests/: Makefile.am  TEMPLATE.testin  cat-1.shin  cat-1.verify  cat01.testin  cat02.testin  cat03.testin  compile_test.sh  cp01.testin  cp02.testin  cp03.testin  cp04.testin  cp05.testin  cp06.testin  cp07.testin  cp08.testin  cp09.testin  cut01.testin  cut02.testin  cut03.testin  echo-1.shin  echo-1.verify  echo01.testin  echo02.testin  echo03.testin  echo04.testin  echo05.testin  echo06.testin  echo07.testin  echo08.testin  echo09.testin  echo10.testin  file01.testin  find01.testin  find02.testin  find03.testin  find04.testin  find05.testin  find06.testin  find07.testin  (+52 more)
