AC_PREREQ(2.59)
AC_INIT([xml-coreutis],[0.4],[laird@lbreyer.com])
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_SYSTEM
AC_GNU_SOURCE
AM_INIT_AUTOMAKE([xml-coreutils],[0.4],[laird@lbreyer.com])
AM_CONFIG_HEADER(src/config.h)

## Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC

## Checks for libraries.
AC_CHECK_LIB([m],[log])
AC_CHECK_LIB([expat],[XML_ParseBuffer])
AC_CHECK_LIB([slang],[Slsmg_init_smg])

## Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([features.h langinfo.h unistd.h sys/mman.h mman.h netinet/in.h])
AC_CHECK_HEADERS([wchar.h wctype.h],,
[
	AC_MSG_WARN([No wide character headers, disabling full internationalization.])
])
AC_CHECK_HEADERS([expat.h])

## Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

## Checks for library functions.
AC_FUNC_VPRINTF

AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile src/tests/Makefile man/Makefile])
AC_OUTPUT
